--- a/Helloworld.Rmd
+++ b/Helloworld.Rmd
@@ -1,7 +1,1 @@
----
-title: "Untitled"
-author: "Naman"
-date: "13/06/2020"
-output: pdf_document
----
-##This is a markdown file
+### This is markdown file
